--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
 	</properties>
 
 	<modules>
-		<module>zz91-mail-client</module>
 		<module>zz91-tags</module>
 		<module>zz91-log</module>
-        	<module>zz91-mail</module>
+        <module>zz91-mail</module>
+        <module>zz91-sms</module>
     	</modules>
 
 	<dependencyManagement>
