--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.zz91</groupId>
 	<artifactId>app-parent</artifactId>
@@ -16,11 +17,15 @@
 	</properties>
 
 	<modules>
+		<!--
 		<module>zz91-tags</module>
 		<module>zz91-log</module>
-        <module>zz91-mail</module>
-        <module>zz91-sms</module>
-    	</modules>
+		<module>zz91-mail</module>
+		-->		
+		<module>zz91-sms</module>
+		<module>zz91-sms-common</module>
+		<module>zz91-sms-gateway</module>
+	</modules>
 
 	<dependencyManagement>
 		<dependencies>
@@ -30,17 +35,17 @@
 				<version>4.0</version>
 				<scope>test</scope>
 			</dependency>
-		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
-		</dependency>
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>3.2.1</version>
+			</dependency>
 			<dependency>
 				<groupId>log4j</groupId>
 				<artifactId>log4j</artifactId>
 				<version>1.2.14</version>
 			</dependency>
-			<!--ibatis-mySQL-->
+			<!--ibatis-mySQL -->
 			<dependency>
 				<groupId>c3p0</groupId>
 				<artifactId>c3p0</artifactId>
@@ -56,7 +61,7 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>5.1.6</version>
 			</dependency>
-			<!--Spring 支持-->
+			<!--Spring 支持 -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
@@ -75,7 +80,7 @@
 			<dependency>
 				<groupId>com.zz91</groupId>
 				<artifactId>zz91-utils</artifactId>
-				<version>1.5.34-SNAPSHOT</version>
+				<version>1.6.6-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -135,11 +140,11 @@
 				<version>1.8.3</version>
 			</dependency>
 			<dependency>
-                <groupId>javax.mail</groupId>
-                <artifactId>mail</artifactId>
-                <version>1.4.1</version>
-            </dependency>
-			<!--Struts 支持-->
+				<groupId>javax.mail</groupId>
+				<artifactId>mail</artifactId>
+				<version>1.4.1</version>
+			</dependency>
+			<!--Struts 支持 -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
@@ -162,7 +167,7 @@
 				<version>2.2.3</version>
 				<classifier>jdk15</classifier>
 			</dependency>
-			<!--velocity-->
+			<!--velocity -->
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
 				<artifactId>velocity</artifactId>
@@ -174,9 +179,9 @@
 				<version>1.4</version>
 			</dependency>
 			<dependency>
-				  <groupId>org.jsoup</groupId>
-				  <artifactId>jsoup</artifactId>
-				  <version>1.3.3</version>
+				<groupId>org.jsoup</groupId>
+				<artifactId>jsoup</artifactId>
+				<version>1.3.3</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.mail</groupId>
@@ -188,6 +193,12 @@
 				<artifactId>mina-core</artifactId>
 				<version>2.0.4</version>
 			</dependency>
+			<!-- sms-common -->
+			<dependency>
+				<groupId>com.zz91</groupId>
+				<artifactId>zz91-sms-common</artifactId>
+				<version>1.0-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -198,18 +209,9 @@
 			<url>http://192.168.2.178:8080/artifactory/repo</url>
 		</repository>
 	</repositories>
-	<!--
-	<pluginRepositories>
-		<pluginRepository>
-			<id>zz91_pluginRepository</id>
-			<name>zz91 local artifactory</name>
-			<url>http://192.168.2.2:8080/artifactory/plugins-releases</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
-	-->
+	<!-- <pluginRepositories> <pluginRepository> <id>zz91_pluginRepository</id> 
+		<name>zz91 local artifactory</name> <url>http://192.168.2.2:8080/artifactory/plugins-releases</url> 
+		<snapshots> <enabled>false</enabled> </snapshots> </pluginRepository> </pluginRepositories> -->
 	<build>
 		<plugins>
 			<plugin>
@@ -271,15 +273,8 @@
 					</webResources>
 				</configuration>
 			</plugin>
-			<!--
-			<plugin>  
-				<groupId>org.apache.maven.plugins</groupId>  
-				<artifactId>maven-resources-plugin</artifactId>  
-				<configuration>  
-					<encoding>UTF-8</encoding>  
-				</configuration>  
-			</plugin>
-			-->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-resources-plugin</artifactId> 
+				<configuration> <encoding>UTF-8</encoding> </configuration> </plugin> -->
 		</plugins>
 		<resources>
 			<resource>
@@ -329,7 +324,7 @@
 				<package.environment>production</package.environment>
 				<jdbc.tags.location>file:/usr/tools/config/db/db-zztags.properties</jdbc.tags.location>
 			</properties>
-		</profile>  
+		</profile>
 		<profile>
 			<id>test</id>
 			<properties>
