--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,7 @@
 	</properties>
 
 	<modules>
-		<!--
-		<module>zz91-tags</module>
-		<module>zz91-log</module>
-		<module>zz91-mail</module>
-		-->		
+		<!-- <module>zz91-tags</module> <module>zz91-log</module> <module>zz91-mail</module> -->
 		<module>zz91-sms</module>
 		<module>zz91-sms-common</module>
 		<module>zz91-sms-gateway</module>
@@ -198,6 +194,12 @@
 				<groupId>com.zz91</groupId>
 				<artifactId>zz91-sms-common</artifactId>
 				<version>1.0-SNAPSHOT</version>
+			</dependency>
+			<!-- sms send jar emay -->
+			<dependency>
+				<groupId>cn.emay</groupId>
+				<artifactId>emaysdkclient</artifactId>
+				<version>4.2.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
