--- a/zz91-sms/src/main/webapp/WEB-INF/web.xml
+++ b/zz91-sms/src/main/webapp/WEB-INF/web.xml
@@ -43,11 +43,11 @@
 		</init-param>
 		<init-param>
 			<param-name>noAuthPage</param-name>
-			<param-value>/|/index.htm|/welcome.htm|/mymenu.htm|/shutdownRecovery.htm*|/monitor.htm*|/getMonitor.htm</param-value>
+			<param-value>/|/index.htm|/welcome.htm|/mymenu.htm</param-value>
 		</init-param>
 		<init-param>
 			<param-name>noLoginPage</param-name>
-			<param-value>/login.htm|/logout.htm|/forbiden.htm|/error.htm|/checkuser.htm|/email/*|/api/*</param-value>
+			<param-value>/login.htm|/logout.htm|/forbiden.htm|/error.htm|/checkuser.htm</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
