完成:sms发送接口controller建立

--- a/zz91-sms/doc/db-zzsms.properties
+++ b/zz91-sms/doc/db-zzsms.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.2.10:3306/zzsms?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://192.168.2.10:3306/zzsms_test?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
 jdbc.password=zj88friend
 jdbc.maxPoolSize=50
