--- a/zz91-sms/src/main/webapp/WEB-INF/web.xml
+++ b/zz91-sms/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
 		</init-param>
 		<init-param>
 			<param-name>noLoginPage</param-name>
-			<param-value>/login.htm|/logout.htm|/forbiden.htm|/error.htm|/checkuser.htm</param-value>
+			<param-value>/login.htm|/logout.htm|/forbiden.htm|/error.htm|/checkuser.htm|/sms/*</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
