--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,27 @@
 			<dependency>
 				<groupId>cn.emay</groupId>
 				<artifactId>emaysdkclient</artifactId>
-				<version>4.2.0</version>
+				<version>4.3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.axis</groupId>
+				<artifactId>axis</artifactId>
+				<version>1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.xml</groupId>
+				<artifactId>jaxrpc</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-discovery</groupId>
+				<artifactId>commons-discovery</artifactId>
+				<version>0.5</version>
+			</dependency>
+			<dependency>
+				<groupId>wsdl4j</groupId>
+				<artifactId>wsdl4j</artifactId>
+				<version>1.6.2</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
