--- a/zz91-mail/src/main/resources/dev/log4j.properties
+++ b/zz91-mail/src/main/resources/dev/log4j.properties
@@ -1,5 +1,5 @@
 #############default level and appender####################
-log4j.rootCategory=info,stdout
+log4j.rootCategory=debug,stdout
 
 ##################appender stdout##########################
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -8,8 +8,8 @@ log4j.appender.stdout.Threshold = debug
 log4j.appender.stdout.layout.ConversionPattern= %-d{yyyy-MM-dd HH:mm:ss} %5p [%t] (%F:%L) - %m%n
 
 ##################show file##########################
-log4j.logger.java.sql.Connection=info
-log4j.logger.java.sql.Statement=info
-log4j.logger.java.sql.PreparedStatement=info
-log4j.logger.java.sql.ResultSet=info
-log4j.logger.javax.sql=info
+log4j.logger.java.sql.Connection=debug
+log4j.logger.java.sql.Statement=debug
+log4j.logger.java.sql.PreparedStatement=debug
+log4j.logger.java.sql.ResultSet=debug
+log4j.logger.javax.sql=debug
