--- a/zz91-sms-gateway/pom.xml
+++ b/zz91-sms-gateway/pom.xml
@@ -24,15 +24,32 @@
 			<groupId>com.zz91</groupId>
 			<artifactId>zz91-sms-common</artifactId>
 		</dependency>
-		<!-- zzutil  -->
+		<!-- zzutil -->
 		<dependency>
 			<groupId>com.zz91</groupId>
 			<artifactId>zz91-utils</artifactId>
 		</dependency>
-		<!-- emay jar -->
+		<!-- emay common -->
 		<dependency>
 			<groupId>cn.emay</groupId>
 			<artifactId>emaysdkclient</artifactId>
+		</dependency>
+		<!-- emay webservice -->
+		<dependency>
+			<groupId>org.apache.axis</groupId>
+			<artifactId>axis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxrpc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-discovery</groupId>
+			<artifactId>commons-discovery</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
 		</dependency>
 	</dependencies>
 	<properties>
