fixed:整合大方、金城代码

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 	</properties>
 
 	<modules>
-		<!-- <module>zz91-tags</module> <module>zz91-log</module> <module>zz91-mail</module> -->
+		<module>zz91-tags</module> 
+		<module>zz91-log</module>
+		<module>zz91-mail</module> 
 		<module>zz91-sms</module>
 		<module>zz91-sms-common</module>
 		<module>zz91-sms-gateway</module>
