--- a/zz91-log/pom.xml
+++ b/zz91-log/pom.xml
@@ -91,6 +91,17 @@
         	<groupId>org.jsoup</groupId>
         	<artifactId>jsoup</artifactId>
         </dependency>
+        <!-- mongodb -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+	 <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
