--- a/zz91-log/src/main/webapp/WEB-INF/web.xml
+++ b/zz91-log/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,31 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
+	<!--
+		<servlet> <servlet-name>initSystem</servlet-name>
+		<servlet-class>com.zz91.log.config.InitServlet</servlet-class>
+		<load-on-startup>2</load-on-startup> </servlet>
+	-->
+	<servlet>
+		<servlet-name>logReadServer</servlet-name>
+		<servlet-class>com.zz91.log.servlet.LogReadServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>logReadServer</servlet-name>
+		<url-pattern>/logRead</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>logRecordServer</servlet-name>
+		<servlet-class>com.zz91.log.servlet.LogRecordServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>logRecordServer</servlet-name>
+		<url-pattern>/logRecord</url-pattern>
+	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>logServer</servlet-name>
 		<servlet-class>com.zz91.log.servlet.LogServerServlet</servlet-class>
@@ -13,12 +38,6 @@
 		<servlet-name>logServer</servlet-name>
 		<url-pattern>/log</url-pattern>
 	</servlet-mapping>
-
-	<!--
-		<servlet> <servlet-name>initSystem</servlet-name>
-		<servlet-class>com.zz91.log.config.InitServlet</servlet-class>
-		<load-on-startup>2</load-on-startup> </servlet>
-	-->
 
 	<servlet>
 		<servlet-name>tracking</servlet-name>
