--- a/zz91-mail/pom.xml
+++ b/zz91-mail/pom.xml
@@ -10,7 +10,7 @@
   <groupId>com.zz91</groupId>
   <artifactId>zz91-mail</artifactId>
   <packaging>war</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>slaver-1.0.1</version>
   <name>zz91-mail</name>
   <dependencies>
         <dependency>
@@ -148,14 +148,13 @@
 			</dependency>
     </dependencies>
     <build>
-        <finalName>zz91-mail</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>tomcat-maven-plugin</artifactId>
                 <configuration>
                     <path>/zzmail</path>
-                    <port>8077</port>
+                    <port>8080</port>
                 </configuration>
             </plugin>
         </plugins>
