--- a/zz91-sms/pom.xml
+++ b/zz91-sms/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.zz91</groupId>
 	<artifactId>zz91-sms</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>slaver-1.0.1</version>
 	<name>zz91-sms</name>
 	<dependencies>
 		<dependency>
@@ -173,7 +173,6 @@
 	</dependencies>
 
 	<build>
-		<finalName>zz91-sms</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
